--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    We love Pandas!
+    We ❤️ Pandas!
   </h1>
 </div>
 <h2></h2>
