add build script

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,9 @@
     We ❤️ Pandas!
   </h1>
 </div>
-<h2></h2>
 <img src="assets/images/panda.jpg">
+<p>They are the least racist animal you will ever meet. I'm sure plenty of you have heard this before, and it is kind of a common joke, but to me it just makes sense. Pandas are black, white and Asian.</p>
+
+<p>Pandas, the  living proof that you can be fat just by eating salad.</p>
+
+<p>Pandas are found from China and they  live in a few mountain ranges in central China, mainly in Sichuan, but also in neighbouring Shaanxi and Gansu.</p>
