add habitat information

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,9 @@
 
 <p>Pandas, the  living proof that you can be fat just by eating salad.</p>
 
-<p>Pandas are found from China and they  live in a few mountain ranges in central China, mainly in Sichuan, but also in neighbouring Shaanxi and Gansu.</p>
+<h2>Habitat information</h2>
+<li>Pandas are found from China and they  live in a few mountain ranges in central China, mainly in Sichuan, but also in neighbouring Shaanxi and Gansu.</li>
+<li>Panda's diet is primarily herbivorous, consisting almost exclusively of bamboo</li>
+<li>Pandas communicate through vocalization and scent marking such as clawing trees or spraying urine.</li>
+<li>A panda's daily diet consists almost entirely of the leaves, stems and shoots of various bamboo species.</li>
+<li>Bamboo contains very little nutritional value so pandas must eat 12-38kg every day to meet their energy needs.</li>
