--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,4 @@
 <li>Pandas communicate through vocalization and scent marking such as clawing trees or spraying urine.</li>
 <li>A panda's daily diet consists almost entirely of the leaves, stems and shoots of various bamboo species.</li>
 <li>Bamboo contains very little nutritional value so pandas must eat 12-38kg every day to meet their energy needs.</li>
+<router-outlet></router-outlet>
