Basic router to home and gallery, plus adding angular material

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,4 +1,6 @@
-<p>
-  <img src="assets/images/{{id}}.jpg" />
-<p>{{text}}</p>
-</p>
+<div>
+  <p>
+    <!--img src="assets/images/{{id}}.jpg" /-->
+    <img src="assets/images/panda1.jpg" />
+  </p>
+</div>>
